# napari-ytschema

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
napari_ytschema/: _reader.py  test_json.json
napari_ytschema/_tests/: test_reader.py
