[metadata]
name = napari-ytschema
version = 0.0.1
author = Chris Havlin
author_email = chris.havlin@gmail.com
license = MIT
url = https://github.com/chrishavlin/napari-ytschema
description = test of a schema based loader
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/chrishavlin/napari-ytschema/issues
    Documentation = https://github.com/chrishavlin/napari-ytschema#README.md
    Source Code = https://github.com/chrishavlin/napari-ytschema
    User Support = https://github.com/chrishavlin/napari-ytschema/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-ytschema = napari_ytschema
